package factory;

public class Square implements Shape
{
    public void draw()
    {
        System.out.println("Inside Square::draw() method.");
    }
}
