package observer1;

public interface Subscriber
{
    void update(String event);
}
