@startuml
class factory.Circle
class factory.Main
class factory.Rectangle
class factory.ShapeFactory
class factory.Square
class java.util.ArrayList
class java.util.Scanner
class observer2.Publisher
class observer2.Test
class observer3.ConcreteSubscriber
class observer3.Publisher
class observer3.Test
interface factory.Shape
interface observer2.Subscriber
interface observer3.Subscriber
factory.Circle --|> factory.Shape
factory.Rectangle --|> factory.Shape
factory.Square --|> factory.Shape
observer2.Publisher ..> java.util.ArrayList
observer2.Publisher ..> java.util.Scanner
observer3.ConcreteSubscriber --|> observer3.Subscriber
observer3.Publisher ..> java.util.ArrayList
observer3.Publisher ..> java.util.Scanner
@enduml